// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.bff.v1alpha;

import "google/api/field_behavior.proto";
import "google/type/interval.proto";
import "wfa/measurement/reporting/bff/v1alpha/demo_bucket.proto";

option java_package = "org.wfanet.measurement.reporting.bff.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "TimeIntervalProto";

option go_package = "wfa/measurement/reporting/bff/v1alpha/reportingpb";

message TimeInterval {
  google.type.Interval time_interval = 1
      [(google.api.field_behavior) = OUTPUT_ONLY];

  repeated DemoBucket demo_bucket = 2
      [(google.api.field_behavior) = OUTPUT_ONLY];
}
